SPIKE: add --target=yaml to codegen

--- a/packages/playwright-core/package.json
+++ b/packages/playwright-core/package.json
@@ -40,5 +40,11 @@
   "bin": {
     "playwright-core": "cli.js"
   },
-  "types": "types/types.d.ts"
+  "types": "types/types.d.ts",
+  "dependencies": {
+    "js-yaml": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.9"
+  }
 }
